<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addLocationFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:contentDescription="@string/add_location"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/myLocationFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:contentDescription="@string/my_location"
        android:src="@android:drawable/ic_menu_mylocation"
        app:layout_constraintBottom_toTopOf="@id/addLocationFab"
        app:layout_constraintEnd_toEndOf="@id/addLocationFab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/centerOnTunisiaFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:contentDescription="@string/center_on_tunisia"
        android:src="@drawable/ic_eco"
        app:layout_constraintBottom_toTopOf="@id/myLocationFab"
        app:layout_constraintEnd_toEndOf="@id/addLocationFab" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/filterCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/elevation_card"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_medium">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/allLocationsButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/all_locations" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/myLocationsButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/my_locations" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addEcoLocationsButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/margin_small"
                app:icon="@drawable/ic_eco"
                app:iconTint="@color/primary"
                android:contentDescription="@string/add_eco_locations" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emptyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="@dimen/margin_medium"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
